_assets_/css/layout.css
/* ... */
.e-notify img{display:none}
.e-notify i{margin-right:4px!important}
.e-notify a{position:absolute;top:0;bottom:0;left:0;right:0}

/* -----------------------------------------

#rz alert

-----------------------------------------*/
.floating-alert{position:fixed;z-index:99999;bottom:10px;margin:0;right:10px;border:3px solid #fff;background:#000;background:rgba(0,0,0,.9);box-shadow:0 0 10px rgba(0,0,0,.2);color:#fff;padding:30px;font-size:14px;width:350px;}
.floating-alert h4{color:#ffc140;margin:0 0 10px;font-family:sans-serif;font-weight:bold;text-transform:uppercase;font-size:18px}
.floating-alert .btn{padding:8px 10px;margin:20px 0 0 0!important}
.floating-alert .close{padding:0;background:none!important;color:#fff!important;opacity:1;margin-right:20px}

/* -----------------------------------------

#rz edit

-----------------------------------------*/

/* -----------------------------------------

#loader

-----------------------------------------*/
#loader-wrapper{position:fixed;top:0;right:0;bottom:0;left:0;background:#233447;z-index:99999;display:none!important}
#loader-wrapper img{width:60px;position:absolute;top:50%;left:50%;margin:-30px 0 0 -30px;animation:2s cubic-bezier(0.63, 0.045, 0.34, 1) 0s normal none infinite spinning_animation;-webkit-animation:2s cubic-bezier(0.63, 0.045, 0.34, 1) 0s normal none infinite spinning_animation}
@keyframes spinning_animation {
	0%{transform:scale(1) rotate(0deg);-o-transform:scale(1) rotate(0deg)}
	50%{transform:scale(0.8) rotate(360deg);-o-transform:scale(0.8) rotate(360deg)}
	100%{transform:scale(1) rotate(720deg);-o-transform:scale(1) rotate(720deg)}
}
@-webkit-keyframes spinning_animation {
	0%{-webkit-transform:scale(1) rotate(0deg)}
	50%{-webkit-transform:scale(0.8) rotate(360deg)}
	100%{-webkit-transform:scale(1) rotate(720deg)}
}

/* -----------------------------------------

#main

-----------------------------------------*/
body{overflow-x:hidden}
.container {width: 1470px; max-width: 100%;}
.text-overflow{overflow:hidden;text-overflow:ellipsis;white-space:nowrap}


#calendarEvent{left:0px;max-height:500px;overflow-y:auto;margin:0 auto}


/*--------------- #nav ---------------*/
header {position: relative; background-color: #6b777d; box-shadow: 0 10px 40px 5px rgba(0,0,0,.1);}
header .container {padding: 36px 15px 29px;}
#logo {display: inline-block; width: 351px;}
#nav-toggle,
.toggle,
.toggle2{display:none}

#top-nav {text-align: right; margin-top: 2px;}

#weather span:first-of-type {font-family: 'Miller'; font-size: 18px; line-height: 32px; color: #000;}
#weather i {color: #fff; font-size: 40px; margin-left: 15px; line-height: 0;}
#weather .forecast {color: #fff; font-size: 17px; margin-left: 13px;}

.social-links {margin-right: 27px;}
.social-links a {font-size: 20px; text-decoration: none; width: 35px; height: 35px; line-height: 35px; text-align: center; background-color: #464449; color: #6b777d; border-radius: 100%; margin-left: 16px;}

#search {position: relative; width: 280px;}
#search form {margin: 0;}
#search label {display: none;}
#search input {font-family: 'Miller'; font-size: 16px; height: 35px; border-radius: 25px; padding: 0 48px 0 18px; color: #000;}
#search input::placeholder {font-family: 'Miller'; font-size: 16px; color: #000;}
#search button {position: absolute; top: 0; right: 0; height: 35px; line-height: 35px; width: 35px; padding: 0; margin: 0; font-size:16px; text-align: center; border-radius: 25px; background-color: #464449;}
#search button i {opacity: 0.6;}

nav {font-size: 0;}
nav ul {margin: 0; padding: 0;}
#nav li {position: relative; display: inline-block; margin: 0;}
#nav li a {font-family: 'Avenir-Med'; display: inline-block; width: 100%; font-size: 18px; line-height: 32px; letter-spacing: 0.025em; padding: 0 26.5px 0 33.5px; text-transform: uppercase; text-decoration: none; color: #fff;}

#nav>li>ul {display: none;}

#nav>li>ul li{display:inline-block;width:100%}
#nav>li>ul li a{display:block}


/*--------------- #yt-player ---------------*/
#yt-player {padding: 40px 0;}
#video-bg {box-shadow: 0 0 30px 5px rgba(0,0,0,.1);}


/*--------------- #quick-links ---------------*/
#quick-links {font-size: 0;}
#quick-links-container {outline: 4px solid #fff; outline-offset: -2px;}
a.quick-link {display: inline-block; width: 33.33%; font-size: 24px; line-height: 32px; letter-spacing: 0.01em; text-transform: uppercase; text-decoration: none; color: #464449; border: 1px solid rgba(0,0,0,.2); padding: 34px 70px 26px 74px;}
a.quick-link:hover {color: #fff; background-color: #2491b2;}
a.quick-link:hover .quick-link-img {filter: invert(50%) sepia(30%) saturate(444%) hue-rotate(175deg) brightness(45%) contrast(85%);}
.quick-link-img {display: inline-block; width: 50px; height: 40px;}
a.quick-link span {position: relative; top: -11px; left: 22px;}


/*--------------- #content ---------------*/
#content .container {width: 1500px;}
#content h2 {position: relative; top: 7px; left: -3px; font-family: 'Avenir-Demi'; font-size: 40px; line-height: 32px; letter-spacing: 0.05em; color: #252525; text-transform: uppercase; margin: 0;}
#content .btn {padding: 0; background-color: #fff; color: #464449!important; border: 4px solid #2491b2; border-radius: 25px; font-weight: 300!important;}


/*--------------- #news ---------------*/
#news {padding: 65px 0;}
#news h2 {float: left;}
#news h2:before {content: ''; position: absolute; top: -32px; left: -77px; width: 468px; height: 50px; background-color:#ddde90; z-index: -1;}
#news .btn {float: right; font-size: 14px; height: 40px; line-height: 32px; letter-spacing: 0.025em; width: 230px; margin-right: 82px; }

#news-links {top: 41px;}
#news-links .owl-prev,
#news-links .owl-next {position: absolute; top: -92px; right: 17px; font-size: 40px; color: #6b777d;}
#news-links .owl-prev {right: 46px;}
#news-links .owl-item {padding: 0 0 15px 15px;}
#news-links .owl-height {height: 115%!important;}
/* ... */

